# echo-server

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  client.py  deploy-server-to-remote-machine.yml  echo_server.py  echoserver_client.py  pyproject.toml  requirements.txt
echoserver/: __main__.py  handler.py  utils.py
src/: main.py  pyproject.toml  requirements.txt  setup.cfg
src/echoserver/: utils.py
src/tests/: test_handler.py
tests/: test_handler.py
utils/: Jenkinsfile.template  deploy-server-to-remote-machine.yml
