[project]
name = 'schizmone-echoserver'
version = '0.0.3'
authors = [
    { name='Aleksey Larionov', email='schizm.one@gmail.com' },
]
description = 'Simple Web Server with the ability to send echoreply or generate random strings'
readme = 'README.md'
requires-python = '>=3.10'
dynamic = ['dependencies', 'optional-dependencies']
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Home Page" = 'https://github.com/SchizmOne/echo-server'

[build-system]
requires = ['setuptools', 'wheel'] 
build-backend = 'setuptools.build_meta'