[project]
name = 'echoserver'
version = '0.0.1'
authors = [
    { name='Aleksey Larionov', email='schizm.one@gmail.com' },
]
description = 'Simple Web Server with the ability to send echoreply or generate random strings'
readme = 'README.md'
requires-python = '>=3.8'
dynamic = ['dependencies', 'optional-dependencies']

[project.urls]
"Home Page" = 'https://github.com/SchizmOne/echo-server'

[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools', 'wheel']  # PEP 508 specifications.
build-backend = 'setuptools.build_meta'